# board_code

./: .gitignore  README.md  gi.sh  ini_all.txt  ini_zcu1.txt  ini_zcu2.txt  makefile  qregd  tar.sh  tst  u
cfg/: cal_zcu1_rebal_d250627_012.txt  cal_zcu1_rebal_d250725_009.txt  cal_zcu1_rebal_d250907_013.txt  cal_zcu2_rebal_d250725_005.txt  cal_zcu2_rebal_d250822_014.txt  ini_all.txt  ini_zcu1.txt  ini_zcu2.txt  preemph.bin2  si5328_302MHz_to_61.667MHz.txt
ech/: CMakeLists.txt  cmd.c  cmd.h  corr.c  corr.h  d.p  ech  ech.c  makefile  mon  mon.c  myiio.c  myiio.h
qregd/: CMakeLists.txt  ech  ech.c  line.h  makefile  mon  myiio.c  myiio.h  parse.c  qna_usb.c  qregd  qregd.c  topmake.mk  tst.c
src/: cmd.c  cmd.h  common.c  corr.c  fname.c  fname.h  h.c  h.h  h_vhdl_extract.c  h_vhdl_extract.h  h_vhdl_extract.h.bak2  hdl.c  hdl.h  i2c.c  i2c.h  ini.c  ini.h  line.c  makefile  mon.c  mx.c  mx.h  parse.c  parse.h  q.c  qna.c  qna.h  qna_usb.c  qna_usb.h  qregc.c  qregc.h  qregd.c  qregs.c  qregs.h  qregs_ll.h  rp.c  rp.h  si5328_302MHz_to_57.8MHz.txt  si5328_302MHz_to_61.667MHz.txt  si5328_302MHz_to_92.52MHz.txt  (+9 more)
